--- a/mygalleria/templates/photos/base.html
+++ b/mygalleria/templates/photos/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 %}
+{% load bootstrap4 %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -9,13 +9,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     {% if title %}
-    <title>Birons Gallery - {{title}}</title>
+    <title>Cheat Galleria - {{title}}</title>
     {% else %}
-    <title>Birons Gallery</title>
+    <title>My Galleria</title>
     {% endif %}
 
     {% block styles %}
     {% bootstrap_css %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     {% endblock %}
 
@@ -27,7 +28,7 @@
     {% block content %}{% endblock %}
 
     {% block scripts %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     {% bootstrap_javascript %}
     {% endblock %}
 </body>
