--- a/mygalleria/templates/photos/details.html
+++ b/mygalleria/templates/photos/details.html
@@ -11,14 +11,14 @@
 <body>
     <div class="container-fluid">
 
-        <!-- <div class="row">
+        <div class="row">
             {{image}}
             {{image.name}}
             {{image.category}}
             {{image.description}}
             {{image.location}}
 
-        </div> -->
+        </div>
     </div>
 
 </body>
