--- a/mygalleria/templates/gallery/details.html
+++ b/mygalleria/templates/gallery/details.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My_Galleria</title>
+    <title class="text-center">My_Galleria</title>
 </head>
 
 <body>
