made the form responsive

--- a/mygalleria/templates/gallery/todays_photos.html
+++ b/mygalleria/templates/gallery/todays_photos.html
@@ -8,7 +8,7 @@
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
             <h2 class="text-center"> {{ photos_item.title }} </h2>
         </div>
-        <!-- <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6"> -->
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
             <img src="{{ gallery_item.category.url}}" class="img-responsive" alt="Image">
         </div>
     </div>
